Set required fields for notification. Simple check for bad request.
